# gif-wallpaper

./: .gitignore  .pre-commit-config.yaml  .versionrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO before release  build.gradle  cliff.toml  gradle.properties  settings.gradle
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  deploy-website.yml  gradle-wrapper-validation.yml  manual-release-to-playstore.yml  release-to-playstore.yml  update-playstore-metadata.yml  verify-main.yml  verify-pull-requests.yml  verify.yml
.standard-version/updaters/: app-gradle.js
app/: build.gradle  license_header.kt  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: button_text_color_selector.xml
app/src/main/res/drawable/: ic_collections.xml  ic_color_lens.xml  ic_color_lens_off.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_full.xml  ic_rotate_90_degrees_cw.xml  ic_transform.xml  ic_wallpaper_black_24dp.xml  pattern_stripes.xml  phone_large.xml  shape_circle.xml
app/src/main/res/drawable-night/: phone_large.xml
app/src/main/res/drawable-v26/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/layout/: activity_launcher.xml  activity_settings.xml  activity_setup.xml  activity_text.xml  fragment_first.xml  fragment_launcher.xml  fragment_settings.xml  fragment_setup.xml  fragment_text.xml
app/src/main/res/menu/: extras.xml  setup_options.xml
app/src/main/res/navigation/: navigation_graph.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimen.xml  preferences_default.xml  strings.xml  styles.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-eu/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-v31/: styles.xml
app/src/main/res/values-zh/: strings.xml
docs/: about.md  privacy.md
fastlane/: Appfile  Fastfile  README.md  Screengrabfile
fastlane/metadata/android/: screenshots.html
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/es-ES/: full_description.txt  short_description.txt
fastlane/metadata/android/eu-ES/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt
fastlane/metadata/android/it-IT/: full_description.txt  short_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/tr-TR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/zh-CN/: full_description.txt
fastlane/metadata/android/zh-Hans/: short_description.txt  title.txt
fetch-translations/: Cargo.toml  config.json
fetch-translations/src/: configuration.rs  main.rs  outputs.rs  poe.rs
fetch_translations/: Cargo.toml  config.json
fetch_translations/src/: main.rs  outputs.rs  xml.rs
gradle/wrapper/: gradle-wrapper.properties
markdown/: build.gradle
markdown/src/main/: AndroidManifest.xml
release/: Cargo.toml
release-process/: Cargo.toml  fastlane-cliff.toml  main-cliff.toml
release-process/src/: main.rs
release/src/: main.rs
store-listing/: README.md  de-DE.json  en-US.json  es-ES.json  eu-ES.json  fr-FR.json  it-IT.json  ru-RU.json  tr-TR.json  zh-CN.json
update-fastlane/: Cargo.toml
update-fastlane/src/: main.rs
update_fastlane/: Cargo.toml
update_fastlane/src/: main.rs
website/: config.toml
website/content/: _index.md  privacy.md
website/content/pages/: privacy.md
website/scripts/: copy_changelog.sh  copy_privacy_policy.sh
website/themes/anpu/: LICENSE  README.md  theme.toml
website/themes/anpu/sass/: main.scss
website/themes/anpu/templates/: 404.html  _macros.html  index.html  page.html  section.html
website/themes/juice/sass/: _text.scss  _ultility.scss  juice.scss
website/themes/juice/templates/: _variables.html  index.html  page.html
(+124 files in other folders)
