[package]
name = "fetch-translations"
version = "0.1.0"
authors = ["Benoit Vermont <redwarp@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.20", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xml-rs = "0.8"
convert_case = "0.5"
