[package]
name = "fetch_translations"
version = "0.1.0"
authors = ["Benoit Vermont <redwarp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.42"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.8.1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
xml-rs = "0.8.3"
convert_case = "0.4.0"
