[package]
name = "update_fastlane"
version = "0.1.0"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.42"
